--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,3 +1,19 @@
-node {
-   sh('./ci-test')
+pipeline {
+    agent any
+    stages {
+        stage('Build') {
+            steps {
+                checkout scm
+            }
+        }
+        stage('Test') {
+            steps {
+                sh './ci-test'
+            }
+        }
+        post {
+            always {
+                echo 'Done'
+            }
+    }
 }
